# django-query-doctor

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FOLLOWUPS.md  README.md  UPGRADING.md  claims.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
analyzers/drf-serializer/: index.html
analyzers/duplicate/: index.html
analyzers/fat-select/: index.html
analyzers/missing-index/: index.html
analyzers/nplusone/: index.html
analyzers/overview/: index.html
analyzers/query-complexity/: index.html
analyzers/queryset-eval/: index.html
api/reference/: index.html
benchmarks/: __init__.py  models.py  report.py  run.py  scenarios.py  settings.py
changelog/: index.html
contributing/: index.html
deep-dive/architecture/: index.html
deep-dive/background/: index.html
deep-dive/comparison/: index.html
deep-dive/design-decisions/: index.html
deep-dive/performance/: index.html
deep-dive/why-this-tool/: index.html
docs/: SPEC.md  changelog.md  contributing.md  faq.md  index.md
docs/analyzers/: drf-serializer.md  duplicate.md  fat-select.md  missing-index.md  nplusone.md  overview.md  query-complexity.md  queryset-eval.md
docs/api/: reference.md
docs/deep-dive/: architecture.md  background.md  comparison.md  design-decisions.md  performance.md  why-this-tool.md
docs/examples/: drf-viewsets.md  index.md  large-codebases.md  real-world.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: admin-dashboard.md  async-support.md  auto-fix.md  baseline.md  benchmark-dashboard.md  celery.md  ci-integration.md  custom-plugins.md  grouping.md  how-it-works.md  management-commands.md  middleware.md  pytest-plugin.md  query-ignore.md  queryturbo.md
docs/reporters/: console.md  html.md  index.md  json.md  log.md  opentelemetry.md  overview.md
examples/: README.md  generate_svgs.py  index.html
examples/configs/: ci_integration.yml  queryignore_example  settings_ci.py  settings_full.py  settings_minimal.py  settings_production.py
examples/drf-viewsets/: index.html
examples/github-actions/: query-doctor.yml
examples/large-codebases/: index.html
examples/outputs/: auto_fix_diff.txt  console_output.txt  query_budget_output.txt  report.html  report.json
examples/quick_start/: drf_example.py  install.sh  test_example.py
examples/real-world/: index.html
examples/sample_project/: models.py  serializers.py  settings.py  setup_and_run.py  urls.py  views.py
examples/sample_project/templates/books/: detail.html  list.html
examples/screenshots/: README.md  auto_fix.capture.txt  console_output.capture.txt
examples/scripts/: 01_basic_middleware.py  02_context_manager.py  03_decorator.py  04_pytest_usage.py  05_management_commands.sh  06_celery_tasks.py  07_async_views.py  08_custom_analyzer.py  09_queryignore.py  10_opentelemetry.py  11_auto_fix.sh  12_project_diagnosis.sh  13_diff_aware_ci.sh  14_admin_dashboard.py  generate_all_outputs.py
faq/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/admin-dashboard/: index.html
guides/async-support/: index.html
guides/auto-fix/: index.html
guides/baseline/: index.html
guides/benchmark-dashboard/: index.html
guides/celery/: index.html
guides/ci-integration/: index.html
guides/custom-plugins/: index.html
guides/grouping/: index.html
guides/how-it-works/: index.html
guides/management-commands/: index.html
guides/middleware/: index.html
guides/pytest-plugin/: index.html
guides/query-ignore/: index.html
guides/queryturbo/: index.html
reporters/: index.html
reporters/console/: index.html
reporters/html/: index.html
reporters/json/: index.html
reporters/log/: index.html
reporters/opentelemetry/: index.html
reporters/overview/: index.html
scripts/: __init__.py  claims_check.py  docs_truth_sweep.py  hookenv.py  regen_examples.py
search/: search_index.json
src/query_doctor/: __init__.py  admin_panel.py  apps.py  baseline.py  celery_integration.py  conf.py  context_managers.py  decorators.py  diff_filter.py  exceptions.py  fingerprint.py  fixer.py  grouping.py  ignore.py  interceptor.py  middleware.py  pipeline.py  plugin_api.py  project_diagnoser.py  pytest_plugin.py  stack_tracer.py  types.py  url_discovery.py  urls.py
src/query_doctor/analyzers/: __init__.py  base.py  complexity.py  discovery.py  drf_serializer.py  duplicate.py  fat_select.py  missing_index.py  nplusone.py  queryset_eval.py  serializer_method.py
src/query_doctor/ci/: __init__.py  github.py
src/query_doctor/filters/: __init__.py  file_filter.py
src/query_doctor/reporters/: __init__.py  console.py  dashboard.py  html_reporter.py  json_reporter.py  log_reporter.py  otel_exporter.py  project_report.py
src/query_doctor/turbo/: __init__.py  cache.py  config.py  context.py  fingerprint.py  params.py  patch.py  prepare.py  signals.py  stats.py
tests/: asgi_driver.py  conftest.py  factories.py  settings.py  test_admin_panel.py  test_analyzer_discovery_wiring.py  test_analyzer_self_gates.py  test_ascii_output.py  test_asgi_middleware_chain.py  test_async_context.py  test_async_support.py  test_baseline.py  test_celery_integration.py  test_check_serializers_command.py  test_ci_github.py  test_complexity.py  test_conf.py  test_config_wiring.py  test_console_reporter.py  test_context_managers.py  test_coverage_gaps.py  test_dashboard_reporter.py  test_decorators.py  test_diagnose_project_command.py  test_diff_filter.py  test_drf_serializer.py  test_duplicate.py  test_exceptions.py  test_fat_select.py  test_file_filter.py  test_fingerprint.py  test_fix_queries_command.py  test_fixer.py  test_grouping.py  test_hookenv.py  test_html_reporter.py  test_integration.py  test_interceptor.py  test_json_reporter.py  test_log_reporter.py  (+26 more)
tests/testapp/: models.py  urls.py  views.py
(+7 files in other folders)
